# cpp-interop

./: CMakeLists.txt  README.md  cppcapidemo.py  mlirapidemo.py  template_instantiate_demo.py
interp/: CMakeLists.txt  InterpreterUtils.cpp  InterpreterUtils.h
other/: CMakeLists.txt  Main.cpp  Main.h
p3-ex4/: CMakeLists.txt  instantiate_cpp_template.py  p3-ex4-lib.cpp  p3-ex4.c
working_demo/: CMakeLists.txt  build.sh  foo.cpp  llvmlitedemo.py
